--- a/static/css/style.css
+++ b/static/css/style.css
@@ -3,25 +3,40 @@ body {
   font-family: Arial, sans-serif;
 }
 
+* {
+  margin: 0;
+}
 
+body, html {
+  height: 100%;
+}
 
 #message-container {
-  height: 300px;
+  height: 100%;
   overflow-y: scroll;
   border: 1px solid #ccc;
   padding: 10px;
   background-color: hsl(219, 77%, 66%, .5);
-  width: 70%;
+  width: 100%;
   margin: 0 auto;
+  position: relative;
 }
+
+
+#message-form {
+  width: 90%;
+  text-align: center;
+  position: absolute;
+  bottom: 0;
 }
 
 #message-input {
-  width: 500px;
+  width: 80%;
 }
 
 #send-button {
   margin-top: 10px;
 }
+
 
 
